--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <div id = "content">
        
    <div id = "nav-bar"> 
-    <div class="nav-button> Most Recent </div> 
-    <div class="nav-button> Blue Line Station </div> 
-    <div class="nav-button> Mozarsky Memos </div>
-    <div class="nav-button> TalkBall Tweakers </div>
-    <div class="nav-button> Daily Northwestern </div>
-    <div class="nav-button> Inside NU </div>
-    <div class="nav-button> Marquee Sports Network </div>
+    <div class="nav-button"> Most Recent </div> 
+    <div class="nav-button"> Blue Line Station </div> 
+    <div class="nav-button">  Mozarsky Memos </div>
+    <div class="nav-button"> TalkBall Tweakers </div>
+    <div class="nav-button"> Daily Northwestern </div>
+    <div class="nav-button"> Inside NU </div>
+    <div class="nav-button"> Favorites </div>
    </div>
     
     <h1>  Jake Mozarsky: Sports Portfolio </h1>
