--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <div id = "content">
        
    <div id = "nav-bar"> 
-    <div class="nav-button"> Most Recent </div> 
-    <div class="nav-button"> Favorite pieces</div> 
-    <div class="nav-button"> Story</div>
+    <div class="nav-button"> <a href="About Me/" </a> About me </div> 
+    <div class="nav-button"> <a href="Recent/" </a> My platforms </div> 
+    <div class="nav-button"> <a href="Favorites/" </a>Favorite pieces</div> 
+    <div class="nav-button"> <a href="Story/"  </a>Story</div>
    </div>
     
     <h1>  Jake Mozarsky: Sports Portfolio </h1>
