--- a/Home/index.html
+++ b/Home/index.html
@@ -7,15 +7,19 @@
     <div id = "content">
        
    <div id = "nav-bar"> 
-    <div class="nav-button"> <a href="About Me/" </a> About me </div> 
-    <div class="nav-button"> <a href="Recent/" </a> My platforms </div> 
-    <div class="nav-button"> <a href="Favorites/" </a>Favorite pieces</div> 
-    <div class="nav-button"> <a href="Story/"  </a>Story</div>
+    <div class="nav-button"> <a href="About Me/" > Contact </a>  </div> 
+    <div class="nav-button"> <a href="Recent/" >  My platforms </a> </div> 
+    <div class="nav-button"> <a href="Favorites/" > Favorite pieces </a> </div> 
+    <div class="nav-button"> <a href="Story/" > Story </a></div>
    </div>
-    
-    <h1>  Jake Mozarsky: Sports Portfolio </h1>
 
-    <h2> Attached is the work I have created for different publications and my own personal channels. </h2>
+   <h1>  Jake Mozarsky: Sports Portfolio </h1>
+
+
+
+<h2> Attached is the work I have created for different publications and my own personal channels. </h2>
+
 
 </body>
+
 
