--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -5,6 +5,15 @@
 
 <body> 
 
+    <div id = "content">
+
+    <div id = "nav-bar"> 
+        <div class="nav-button"> <a href="Home/" > Home </a>  </div> 
+        <div class="nav-button"> <a href="Recent/" >  My platforms </a> </div> 
+        <div class="nav-button"> <a href="Favorites/" > Favorite pieces </a> </div> 
+        <div class="nav-button"> <a href="Story/" > Story </a></div>
+       </div>
+
     
     <h1>  Jake Mozarsky: Sports Portfolio </h1>
 
