--- a/story.html
+++ b/story.html
@@ -5,6 +5,13 @@
 
 <body> 
     <div id = "content">
+
+        <div id = "nav-bar"> 
+            <div class="nav-button"> <a href="index.html" >  Home </a> </div> 
+            <div class="nav-button"> <a href="about.html" > Contact </a>  </div> 
+            <div class="nav-button"> <a href="recent.html" > My platforms </a></div>
+            <div class="nav-button"> <a href="favorites.html" > Favorite pieces </a> </div> 
+           </div>
     
     <h1>  Arizona KJ Lewis Story</h1>
 
