--- a/favorites.html
+++ b/favorites.html
@@ -7,12 +7,12 @@
 
     <div id = "content">
 
-    <div id = "nav-bar"> 
-        <div class="nav-button"> <a href="Home/" > Home </a>  </div> 
-        <div class="nav-button"> <a href="Recent/" >  My platforms </a> </div> 
-        <div class="nav-button"> <a href="Favorites/" > Favorite pieces </a> </div> 
-        <div class="nav-button"> <a href="Story/" > Story </a></div>
-       </div>
+        <div id = "nav-bar"> 
+            <div class="nav-button"> <a href="index.html" > Home </a> </div> 
+            <div class="nav-button"> <a href="about.html" > Contact </a>  </div> 
+            <div class="nav-button"> <a href="recent.html" >  My platforms </a> </div> 
+            <div class="nav-button"> <a href="story.html" > Story </a></div>
+           </div>
 
     
     <h1>  Jake Mozarsky: Sports Portfolio </h1>
