--- a/about.html
+++ b/about.html
@@ -8,35 +8,14 @@
     <div id = "content">
 
         <div id = "nav-bar"> 
-            <div class="nav-button"> <a href="index.html" >  Home </a> </div> 
-            <div class="nav-button"> <a href="about.html" > Contact </a>  </div> 
-            <div class="nav-button"> <a href="recent.html" > My platforms </a></div>
+            <div class="nav-button"> <a href="index.html" > Home </a>  </div> 
+            <div class="nav-button"> <a href="recent.html" >  My platforms </a> </div> 
             <div class="nav-button"> <a href="favorites.html" > Favorite pieces </a> </div> 
+            <div class="nav-button"> <a href="story.html" > Story </a></div>
            </div>
-
-    <h1>
-            About Me
-        </h1>
-
-
-<p>
-    I am from Westchester, New York and study sports journalism at Northwestern University. 
-
-I am passionate about covering sports, whether the NHL, MLB, NFL, NBA or college. I have gained experience throughout my time at Northwestern in many areas.
-
-I create both written and multimedia content, and I want to be a voice people can rely on in the sports industry while creating important stories!
-</p>
 
 <p>
     Attached is my contact information along with my social channels:
 </p>
-
-<div>
-    <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/1200px-Logo_of_Twitter.svg.png"
-    width= "100%"
-    /> 
-</div>
-
-
 
 </body>
