--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 
    <h1>  Jake Mozarsky: Sports Portfolio </h1>
 
+   <h2>
+    About Me
+</h2>
 
 
-<h2> Attached is the work I have created for different publications and my own personal channels. </h2>
+<p>
+I am from Westchester, New York and study sports journalism at Northwestern University. 
+
+I am passionate about covering sports, whether the NHL, MLB, NFL, NBA or college. I have gained experience throughout my time at Northwestern in many areas.
+
+I create both written and multimedia content, and I want to be a voice people can rely on in the sports industry while creating important stories!
+</p>
 
 
 </body>
