--- a/story.html
+++ b/story.html
@@ -9,7 +9,7 @@
         <div id = "nav-bar"> 
             <div class="nav-button"> <a href="index.html" >  Home </a> </div> 
             <div class="nav-button"> <a href="about.html" > Contact </a>  </div> 
-            <div class="nav-button"> <a href="recent.html" > My platforms </a></div>
+            <div class="nav-button"> <a href="recent.html" > Recent </a></div>
             <div class="nav-button"> <a href="favorites.html" > Favorite pieces </a> </div> 
            </div>
     
