--- a/recent.html
+++ b/recent.html
@@ -5,15 +5,22 @@
 
 <body> 
     <div id = "content">
+       
+        <div id = "nav-bar"> 
+            <div class="nav-button"> <a href="index.html" >  Home </a> </div> 
+            <div class="nav-button"> <a href="about.html" > Contact </a>  </div> 
+            <div class="nav-button"> <a href="favorites.html" > Favorite pieces </a> </div> 
+            <div class="nav-button"> <a href="story.html" > Story </a></div>
+           </div>
 
-    <h1>  I have been featured in the following publications and platforms</h1>
+    <h1>  I have work  in the following publications and platforms:</h1>
 <h3>  <a href = " https://bluelinestation.com/author/jmozarsky/"> Blue Line Station </a> </h3>
 <h3> <a href = "https://dailynorthwestern.com/staff_name/jake-mozarsky/"> Daily Northwestern </a></h3>
 <h3> <a href = "https://www.insidenu.com/authors/jake-mozarsky"> Inside NU </a></h3>
 <h3> <a href = "https://www.marqueesportsnetwork.com/author/jake-mozarsky/"> Marquee Sports Network </a></h3>
 <h3> <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/"> Arizona Republic </a></h3>
 
-    <h1> I also have two personal channels</h1>
+    <h1> I also have two personal channels:</h1>
     <h3> <a href  = "https://www.youtube.com/@mozarskymemos"> Mozarsky Memos </a> </h3>
     <h3> <a href  = "https://www.youtube.com/@TBTweakersPod"> TalkBall Tweakers </a></h3>
 </body>
