--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <div id = "content">
        
    <div id = "nav-bar"> 
-    <div class="nav-button"> <a href="about.html" > Contact </a>  </div> 
-    <div class="nav-button"> <a href="recent.html" >  My platforms </a> </div> 
+    <div class="nav-button"> <a href="about.html" > Contact </a> </div> 
+    <div class="nav-button"> <a href="recent.html" >  Recent </a> </div> 
     <div class="nav-button"> <a href="favorites.html" > Favorite pieces </a> </div> 
-    <div class="nav-button"> <a href="story.html" > Story </a></div>
+    <div class="nav-button"> <a href="story.html" > Story </a> </div>
    </div>
 
-   <h1>  Jake Mozarsky: Sports Portfolio </h1>
+   <h1>  Welcome to my sports Portfolio </h1>
 
    <h2>
     About Me
@@ -27,6 +27,8 @@ I am passionate about covering sports, whether the NHL, MLB, NFL, NBA or college
 
 I create both written and multimedia content, and I want to be a voice people can rely on in the sports industry while creating important stories!
 </p>
+
+<img src = "IMG_8654.jpeg" alt="image ">
 
 
 </body>
