--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <div class="nav-button"> <a href="story.html" > Story </a> </div>
    </div>
 
-   <h1>  Welcome to my sports Portfolio </h1>
+   <h1>  Welcome to my Sports Portfolio! </h1>
 
    <h2>
-    About Me
+    About Me:
 </h2>
 
 
 <p>
-I am from Westchester, New York and study sports journalism at Northwestern University. 
+My name is Jake Mozarsky. I am from Westchester, New York and study sports journalism at Northwestern University. 
 
 I am passionate about covering sports, whether the NHL, MLB, NFL, NBA or college. I have gained experience throughout my time at Northwestern in many areas.
 
 I create both written and multimedia content, and I want to be a voice people can rely on in the sports industry while creating important stories!
 </p>
 
-<img src = "IMG_8654.jpeg" alt="image ">
+<img src = "IMG_8654.jpeg" alt="image">
 
 
 </body>
