--- a/recent.html
+++ b/recent.html
@@ -15,11 +15,11 @@
 
     <h1>  I have work  in the following publications and platforms:</h1>
 
-<h3>  <a href = " https://bluelinestation.com/author/jmozarsky/"> Blue Line Station </a> </h3>
-<h3> <a href = "https://dailynorthwestern.com/staff_name/jake-mozarsky/"> Daily Northwestern </a></h3>
-<h3> <a href = "https://www.insidenu.com/authors/jake-mozarsky"> Inside NU </a></h3>
-<h3> <a href = "https://www.marqueesportsnetwork.com/author/jake-mozarsky/"> Marquee Sports Network </a></h3>
-<h3> <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/"> Arizona Republic </a></h3>
+<h3>  <a href = " https://bluelinestation.com/author/jmozarsky/" target="_blank"> Blue Line Station </a> </h3>
+<h3> <a href = "https://dailynorthwestern.com/staff_name/jake-mozarsky/" target="_blank"> Daily Northwestern </a></h3>
+<h3> <a href = "https://www.insidenu.com/authors/jake-mozarsky" target="_blank"> Inside NU </a></h3>
+<h3> <a href = "https://www.marqueesportsnetwork.com/author/jake-mozarsky/" target="_blank"> Marquee Sports Network </a></h3>
+<h3> <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/" target="_blank"> Arizona Republic </a></h3>
 
     <h1> I also have two personal channels:</h1>
     <h3> <a href  = "https://www.youtube.com/@mozarskymemos"> Mozarsky Memos </a> </h3>
