--- a/recent.html
+++ b/recent.html
@@ -22,8 +22,8 @@
 <h3> <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/" target="_blank"> Arizona Republic </a></h3>
 
     <h1> I also have two personal channels:</h1>
-    <h3> <a href  = "https://www.youtube.com/@mozarskymemos"> Mozarsky Memos </a> </h3>
-    <h3> <a href  = "https://www.youtube.com/@TBTweakersPod"> TalkBall Tweakers </a></h3>
+    <h3> <a href  = "https://www.youtube.com/@mozarskymemos" target="_blank"> Mozarsky Memos </a> </h3>
+    <h3> <a href  = "https://www.youtube.com/@TBTweakersPod" target="_blank"> TalkBall Tweakers </a></h3>
 
 
 </body>
