--- a/favorites.html
+++ b/favorites.html
@@ -8,9 +8,9 @@
     <div id = "content">
 
         <div id = "nav-bar"> 
-            <div class="nav-button"> <a href="index.html" > Home </a> </div> 
-            <div class="nav-button"> <a href="about.html" > Contact </a>  </div> 
-            <div class="nav-button"> <a href="recent.html" >  My platforms </a> </div> 
+            <div class="nav-button"> <a href="index.html" > Home </a>  </div> 
+            <div class="nav-button"> <a href="about.html" >  Contact </a> </div> 
+            <div class="nav-button"> <a href="recent.html" > Recent </a> </div> 
             <div class="nav-button"> <a href="story.html" > Story </a></div>
            </div>
 
