--- a/about.html
+++ b/about.html
@@ -14,8 +14,16 @@
             <div class="nav-button"> <a href="story.html" > Story </a></div>
            </div>
 
-<p>
+<h2>
     Attached is my contact information along with my social channels:
+</h2>
+
+<p>
+    Email: jakemozarsky2025@u.northwestern.edu
+</p>
+
+<p>
+    Phone: +1 (914) 610-0536
 </p>
 
 </body>
