--- a/favorites.html
+++ b/favorites.html
@@ -17,7 +17,19 @@
     
     <h1>  Jake Mozarsky: Sports Portfolio </h1>
 
-    <h2> Attached is the work I have created for different publications and my own personal channels. </h2>
+    <h2> Attached is some of my favorite works I have created for different publications and my own personal channels. </h2>
+
+    <h3> Blue Line Station:</h3>
+    <p>  <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time" target="_blank"> NY Rangers 2023-24 Post Mortem</a> </p>
+    <p>  <a href = "https://bluelinestation.com/with-a-10-game-point-streak-the-new-york-rangers-have-made-the-homestretch-worth-watching-01jjmk7yygd4" target="_blank"> Home-stretch preview</a> </p>
+    <p>  <a href = "https://bluelinestation.com/four-storylines-the-new-york-rangers-need-to-change-against-the-new-jersey-devils-01jh5t88h50n" target="_blank"> Rangers-Devils preview</a> </p>
+
+    <h3> Daily Northwestern:</h3>
+    <p>  <a href = "https://dailynorthwestern.com/2024/10/08/sports/football-bryce-kirtz-embraces-veteran-role-in-final-collegiate-season/" target="_blank"> Bryce Kirtz feature</a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/11/19/sports/football-a-j-henning-looks-to-maximize-last-11-guaranteed-days-with-northwestern-as-michigan-homecoming-looms/" target="_blank"> A.J. Henning feature </a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/11/11/sports/football-northwesterns-season-is-on-the-line-it-will-be-decided-at-wrigley-field/" target="_blank"> Northwestern Wrigley column</a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/10/04/audio/cats-corner-gameday-breaks-down-northwesterns-conference-home-opener-vs-no-23-indiana/" target="_blank"> Northwestern-Indiana preview (podcast)</a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
 
 </body>
 
