--- a/favorites.html
+++ b/favorites.html
@@ -22,7 +22,7 @@
     <h3> Blue Line Station:</h3>
     <p>  <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time" target="_blank"> NY Rangers 2023-24 Post Mortem</a> </p>
     <p>  <a href = "https://bluelinestation.com/with-a-10-game-point-streak-the-new-york-rangers-have-made-the-homestretch-worth-watching-01jjmk7yygd4" target="_blank"> Home-stretch preview</a> </p>
-    <p>  <a href = "https://bluelinestation.com/four-storylines-the-new-york-rangers-need-to-change-against-the-new-jersey-devils-01jh5t88h50n" target="_blank"> Rangers-Devils preview</a> </p>
+    <p>  <a href = "https://bluelinestation.com/four-storylines-the-new-york-rangers-need-to-change-against-the-new-jersey-devils-01jh5t88h50n" target="_blank"> Rangers-Devils storylines</a> </p>
 
     <h3> Daily Northwestern:</h3>
     <p>  <a href = "https://dailynorthwestern.com/2024/10/08/sports/football-bryce-kirtz-embraces-veteran-role-in-final-collegiate-season/" target="_blank"> Bryce Kirtz feature</a> </p>
@@ -30,6 +30,22 @@
     <p>  <a href = "https://dailynorthwestern.com/2024/11/11/sports/football-northwesterns-season-is-on-the-line-it-will-be-decided-at-wrigley-field/" target="_blank"> Northwestern Wrigley column</a> </p>
     <p>  <a href = "https://dailynorthwestern.com/2024/10/04/audio/cats-corner-gameday-breaks-down-northwesterns-conference-home-opener-vs-no-23-indiana/" target="_blank"> Northwestern-Indiana preview (podcast)</a> </p>
     <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
+
+    <h3> Marquee Sports Network:</h3>
+    <p>  <a href = "https://www.marqueesportsnetwork.com/the-10-most-wholesome-moments-of-the-2023-cubs-season/" target="_blank"> The 10 most wholesome moments of the 2023 Cubs season</a> </p>
+    <p>  <a href = "https://www.marqueesportsnetwork.com/a-unique-special-experience-college-football-returns-to-wrigley-field/" target="_blank"> College Football returns to Wrigley Field</a> </p>
+    <p>  <a href = "https://www.marqueesportsnetwork.com/cubs-legend-shows-up-to-downtown-chicago-to-support-important-cause/" target="_blank"> Andre Dawson charity event</a> </p>
+    <p>  <a href = "https://www.marqueesportsnetwork.com/bears-legend-dick-butkus-dies-at-age-80/" target="_blank"> Dick Butkus dies at 80</a> </p>
+    <p>  <a href = "https://www.marqueesportsnetwork.com/eye-on-the-enemy-what-to-look-out-for-in-cubs-final-series-against-brewers/" target="_blank"> Cubs-Brewers preview</a> </p>
+
+
+    <h3> Inside NU:</h3>
+    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
+    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
+
 
 </body>
 
