--- a/favorites.html
+++ b/favorites.html
@@ -40,11 +40,11 @@
 
 
     <h3> Inside NU:</h3>
-    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
-    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
-    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
-    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
-    <p>  <a href = "https://dailynorthwestern.com/2024/09/13/sports/football-veterans-at-skill-positions-and-less-turnovers-are-the-keys-to-unlocking-northwesterns-offense/" target="_blank"> Offense column</a> </p>
+    <p>  <a href = "https://www.insidenu.com/2023/7/13/23792471/for-northwestern-football-the-immediate-future-is-grim" target="_blank"> For Northwestern football, the immediate future is grim </a> </p>
+    <p>  <a href = "https://www.insidenu.com/2023/3/21/23647264/northwestern-mens-basketball-2022-2023-post-mortem-history-made-every-step-of-the-way" target="_blank"> Northwestern basketball post-mortem</a> </p>
+    <p>  <a href = "https://www.insidenu.com/2024/3/29/24115594/rock-fight-episode-19-wrapping-up-northwesterns-2023-24-season" target="_blank"> Northwestern basketball 2023-24 recap </a> </p>
+    <p>  <a href = "https://www.insidenu.com/2024/1/31/24057199/rock-fight-episode-10-two-wooden-award-winners-in-two-hours" target="_blank"> Northwestern faces Zach Edey, Caitlyn Clark</a> </p>
+    <p>  <a href = "https://www.insidenu.com/2024/2/1/24058240/even-in-tough-loss-northwestern-shows-why-it-has-potential-to-be-special" target="_blank"> NU-Purdue Recap</a> </p>
 
 
 </body>
