--- a/favorites.html
+++ b/favorites.html
@@ -46,6 +46,13 @@
     <p>  <a href = "https://www.insidenu.com/2024/1/31/24057199/rock-fight-episode-10-two-wooden-award-winners-in-two-hours" target="_blank"> Northwestern faces Zach Edey, Caitlyn Clark</a> </p>
     <p>  <a href = "https://www.insidenu.com/2024/2/1/24058240/even-in-tough-loss-northwestern-shows-why-it-has-potential-to-be-special" target="_blank"> NU-Purdue Recap</a> </p>
 
+    <h3> Arizona Republic:</h3>
+    <p>  <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/" target="_blank"> Aaron Rodgers Phoenix Open </a> </p>
+    <p>  <a href = "https://www.azcentral.com/story/sports/college/asu/2025/02/08/ncaa-denver-arizona-state-hockey-shows-fight/78360692007/" target="_blank"> ASU-Denver hockey recap</a> </p>
+    <p>  <a href = "https://www.azcentral.com/story/sports/college/asu/2025/02/06/asu-hockey-denver-game-preview-nchc/78302464007/" target="_blank"> ASU-Denver preview </a> </p>
+    <p>  <a href = "https://drive.google.com/file/d/1DBPpXNa8VeK3JQUdrs7pcQJwdB2IKtGd/view" target="_blank"> Arizona-Texas Tech standup </a> </p>
+
+
 
 </body>
 
