--- a/story.html
+++ b/story.html
@@ -13,9 +13,9 @@
             <div class="nav-button"> <a href="favorites.html" > Favorite pieces </a> </div> 
            </div>
     
-    <h1>  Arizona KJ Lewis Story</h1>
+    <h1>  Story</h1>
 
-    <h2> Attached is the work I have created for different publications and my own personal channels. </h2>
+ 
 
 </body>
 
