--- a/favorites.html
+++ b/favorites.html
@@ -14,20 +14,30 @@
             <div class="nav-button"> <a href="story.html" > Story </a></div>
            </div>
 
-    <h2> Attached is some of my favorite works I have created for different publications and my own personal channels. </h2>
+    <h2> Attached is some of my favorite works I have created for different publications. </h2>
 
-   <div>  <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time"> <img src ="rangerspost.png"
-    width = 50% > </a> </div>
-    <div>  <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/"> <img src ="rodgers.png"
-        width = 50% > </a> </div>
-        <div>  <a href = "https://dailynorthwestern.com/2024/10/08/sports/football-bryce-kirtz-embraces-veteran-role-in-final-collegiate-season/"> <img src ="Kirtz.png"
-            width = 50% > </a> </div>
-            <div>  <a href = "https://www.marqueesportsnetwork.com/a-unique-special-experience-college-football-returns-to-wrigley-field/"> <img src ="cfbwrigley.png"
-                width = 50% > </a> </div>
-            <div>  <a href = "https://www.insidenu.com/2023/3/21/23647264/northwestern-mens-basketball-2022-2023-post-mortem-history-made-every-step-of-the-way"> <img src ="INUPost.png"
-                width = 50% > </a> </div>
-                    <div>  <a href = "https://www.marqueesportsnetwork.com/the-10-most-wholesome-moments-of-the-2023-cubs-season/"> <img src ="cubswholesome.png"
-                        width = 50% > </a> </div>
+   <div>
+    <section>
+     <article> <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time"> <img src ="rangerspost.png"
+    width = 50% > </a> </article>
+    <article>  <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/"> <img src ="rodgers.png"
+        width = 50% > </a> </article>
+     <article> <a href = "https://dailynorthwestern.com/2024/10/08/sports/football-bryce-kirtz-embraces-veteran-role-in-final-collegiate-season/"> <img src ="Kirtz.png"
+        width = 50% > </a> </article>
+</section>
+        </div>
+
+        <div>
+            <section>
+      <article>  <a href = "https://www.marqueesportsnetwork.com/a-unique-special-experience-college-football-returns-to-wrigley-field/"> <img src ="cfbwrigley.png"
+            width = 50% > </a> </article>
+        <article> <a href = "https://www.insidenu.com/2023/3/21/23647264/northwestern-mens-basketball-2022-2023-post-mortem-history-made-every-step-of-the-way"> <img src ="INUPost.png"
+             width = 50% > </a> </article>
+       <article>  <a href = "https://www.marqueesportsnetwork.com/the-10-most-wholesome-moments-of-the-2023-cubs-season/"> <img src ="cubswholesome.png"
+            width = 50% > </a>   </article>
+           </section>
+
+        </div>
 
     <h3> Blue Line Station:</h3>
     <p>  <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time" target="_blank"> NY Rangers 2023-24 Post Mortem</a> </p>
