--- a/about.html
+++ b/about.html
@@ -26,6 +26,13 @@
     Phone: +1 (914) 610-0536
 </p>
 
-<img src="Screenshot 2025-02-20 at 10.30.45 AM.png" >
+<p>
+    Twitter: @jmozarsky
+</p>
+
+<p>
+    YouTube + TikTok: Mozarsky Memos
+</p>
+
 
 </body>
