--- a/favorites.html
+++ b/favorites.html
@@ -18,22 +18,22 @@
 
    <div>
     <section>
-     <article> <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time"> <img src ="rangerspost.png"
+     <article> <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time"> <img src ="nyrcropped.png"
     width = 75% > </a> </article>
-    <article>  <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/"> <img src ="rodgers.png"
+    <article>  <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/"> <img src ="rodgerscropped.png"
         width = 75% > </a> </article>
-     <article> <a href = "https://dailynorthwestern.com/2024/10/08/sports/football-bryce-kirtz-embraces-veteran-role-in-final-collegiate-season/"> <img src ="Kirtz.png"
+     <article> <a href = "https://dailynorthwestern.com/2024/10/08/sports/football-bryce-kirtz-embraces-veteran-role-in-final-collegiate-season/"> <img src ="kirtzcropped.png"
         width = 75% > </a> </article>
 </section>
         </div>
 
         <div>
             <section>
-      <article>  <a href = "https://www.marqueesportsnetwork.com/a-unique-special-experience-college-football-returns-to-wrigley-field/"> <img src ="cfbwrigley.png"
+      <article>  <a href = "https://www.marqueesportsnetwork.com/a-unique-special-experience-college-football-returns-to-wrigley-field/"> <img src ="wrigleycropped.png"
             width = 75% > </a> </article>
-        <article> <a href = "https://www.insidenu.com/2023/3/21/23647264/northwestern-mens-basketball-2022-2023-post-mortem-history-made-every-step-of-the-way"> <img src ="INUPost.png"
+        <article> <a href = "https://www.insidenu.com/2023/3/21/23647264/northwestern-mens-basketball-2022-2023-post-mortem-history-made-every-step-of-the-way"> <img src ="INUcropped.png"
              width = 75% > </a> </article>
-       <article>  <a href = "https://www.marqueesportsnetwork.com/the-10-most-wholesome-moments-of-the-2023-cubs-season/"> <img src ="cubswholesome.png"
+       <article>  <a href = "https://www.marqueesportsnetwork.com/the-10-most-wholesome-moments-of-the-2023-cubs-season/"> <img src ="wholesomecropped.png"
             width = 75% > </a>   </article>
            </section>
 
