--- a/about.html
+++ b/about.html
@@ -26,9 +26,20 @@
     Phone: +1 (914) 610-0536
 </p>
 
-<p>
-    Twitter: @jmozarsky
-</p>
+<div>
+    <section>
+<a href = "https://x.com/jmozarsky">
+    <img src = "twitter.png">
+</a>
+<a href = "https://www.youtube.com/@mozarskymemos">
+    <img src = "youtube.png">
+</a>
+<a href = "https://www.tiktok.com/@mozarskymemos">
+    <img src = "tiktok.png">
+</a>
+</section>
+</div>
+
 
 <p>
     YouTube + TikTok: Mozarsky Memos
