--- a/favorites.html
+++ b/favorites.html
@@ -14,7 +14,7 @@
             <div class="nav-button"> <a href="story.html" > Story </a></div>
            </div>
 
-    <h2> Attached is some of my favorite works I have created for different publications. </h2>
+    <h2> Attached are some of my favorite works I have created for different publications. </h2>
 
    <div>
     <section>
