--- a/about.html
+++ b/about.html
@@ -29,21 +29,19 @@
 <div>
     <section>
 <a href = "https://x.com/jmozarsky">
-    <img src = "twitter.png">
+    <img src = "twitter.png"
+    width = "50">
 </a>
 <a href = "https://www.youtube.com/@mozarskymemos">
-    <img src = "youtube.png">
+    <img src = "youtube.png"
+    width = "100" >
 </a>
 <a href = "https://www.tiktok.com/@mozarskymemos">
-    <img src = "tiktok.png">
+    <img src = "tiktok.png"
+    width = "50" >
 </a>
 </section>
 </div>
-
-
-<p>
-    YouTube + TikTok: Mozarsky Memos
-</p>
 
 
 </body>
