--- a/about.html
+++ b/about.html
@@ -26,19 +26,17 @@
     Phone: +1 (914) 610-0536
 </p>
 
-<div>
+<div class = "images">
     <section>
+        
 <a href = "https://x.com/jmozarsky">
-    <img src = "twitter.png"
-    width = "50">
+    <img src = "twitter.png">
 </a>
-<a href = "https://www.youtube.com/@mozarskymemos">
-    <img src = "youtube.png"
-    width = "100" >
+<div class = "youtube"> <a href = "https://www.youtube.com/@mozarskymemos">
+    <img src = "youtube.png"  > </div>
 </a>
 <a href = "https://www.tiktok.com/@mozarskymemos">
-    <img src = "tiktok.png"
-    width = "50" >
+    <img src = "tiktok.png" >
 </a>
 </section>
 </div>
