--- a/favorites.html
+++ b/favorites.html
@@ -16,7 +16,7 @@
 
     <h2> Attached are some of my favorite works I have created for different publications. </h2>
 
-   <div>
+   <div class = "favorites">
     <section>
      <article> <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time"> <img src ="nyrcropped.png"
     width = 75% > </a> </article>
@@ -27,7 +27,7 @@
 </section>
         </div>
 
-        <div>
+        <div class = "favorites2">
             <section>
       <article>  <a href = "https://www.marqueesportsnetwork.com/a-unique-special-experience-college-football-returns-to-wrigley-field/"> <img src ="wrigleycropped.png"
             width = 75% > </a> </article>
