--- a/recent.html
+++ b/recent.html
@@ -13,13 +13,20 @@
             <div class="nav-button"> <a href="story.html" > Story </a></div>
      </div>
 
-    <h1>  I have work  in the following publications and platforms:</h1>
+    <h1>  I have work  in the following publications and platforms. Click the image banner to be taken to my page:</h1>
 
-<h3>  <a href = " https://bluelinestation.com/author/jmozarsky/" target="_blank"> Blue Line Station </a> </h3>
-<h3> <a href = "https://dailynorthwestern.com/staff_name/jake-mozarsky/" target="_blank"> Daily Northwestern </a></h3>
-<h3> <a href = "https://www.insidenu.com/authors/jake-mozarsky" target="_blank"> Inside NU </a></h3>
-<h3> <a href = "https://www.marqueesportsnetwork.com/author/jake-mozarsky/" target="_blank"> Marquee Sports Network </a></h3>
-<h3> <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/" target="_blank"> Arizona Republic </a></h3>
+    <div class = "image_banners">
+<h3>  <a href = " https://bluelinestation.com/author/jmozarsky/" target="_blank">  <img src ="Blsbanner.png"
+    width = 75% >  </a> </h3>
+<h3> <a href = "https://dailynorthwestern.com/staff_name/jake-mozarsky/" target="_blank"> <img src ="Dailybanner.png"
+    width = 75% >  </a></h3>
+<h3> <a href = "https://www.insidenu.com/authors/jake-mozarsky" target="_blank"> <img src ="INUbanner.png"
+    width = 75% > </a></h3>
+<h3> <a href = "https://www.marqueesportsnetwork.com/author/jake-mozarsky/" target="_blank"> <img src ="marqueebanner.png"
+    width = 75% ></a></h3>
+<h3> <a href = "https://www.azcentral.com/story/sports/golf/phoenix-open/2025/02/05/aaron-rodgers-waste-management-phoenix-open-pro-amscottie-scheffler/78261025007/" target="_blank"> <img src ="azbanner.png"
+    width = 75% > </a></h3>
+</div>
 
     <h1> I also have two personal channels:</h1>
     <h3> <a href  = "https://www.youtube.com/@mozarskymemos" target="_blank"> Mozarsky Memos </a> </h3>
