--- a/recent.html
+++ b/recent.html
@@ -29,8 +29,10 @@
 </div>
 
     <h1> I also have two personal channels:</h1>
-    <h3> <a href  = "https://www.youtube.com/@mozarskymemos" target="_blank"> Mozarsky Memos </a> </h3>
-    <h3> <a href  = "https://www.youtube.com/@TBTweakersPod" target="_blank"> TalkBall Tweakers </a></h3>
+    <h3> <a href  = "https://www.youtube.com/@mozarskymemos" target="_blank"> <img src ="MemoBanner.png"
+        width = 75% > </a> </h3>
+    <h3> <a href  = "https://www.youtube.com/@TBTweakersPod" target="_blank"> <img src ="Tweakersbanner.png"
+        width = 75% > </a></h3>
 
 
 </body>
