--- a/recent.html
+++ b/recent.html
@@ -28,7 +28,7 @@
     width = 75% > </a></h3>
 </div>
 
-    <h1> I also have two personal channels:</h1>
+    <h1> I also have two personal channels. One I run by myself, and the other with two Northwestern graduate students:</h1>
     <h3> <a href  = "https://www.youtube.com/@mozarskymemos" target="_blank"> <img src ="MemoBanner.png"
         width = 75% > </a> </h3>
     <h3> <a href  = "https://www.youtube.com/@TBTweakersPod" target="_blank"> <img src ="Tweakersbanner.png"
