--- a/story.html
+++ b/story.html
@@ -13,8 +13,28 @@
             <div class="nav-button"> <a href="favorites.html" > Favorite pieces </a> </div> 
            </div>
     
-    <h1>  Story</h1>
+           <div class = "Sotoheadline">
+    <h1>  Juan Soto is destined for success with the New York Mets</h1>
+<h2>
+    2024 was Juan Soto’s best season yet. Here’s why he’ll have a better one in 2025 across town.
+</h2>
+           </div>
 
+           <p>
+            This offseason, the MLB world witnessed one of the biggest moves in sports history when Juan Soto signed a 15-year, $765 million contract with the New York Mets. Soto, who spent 2024 with the New York Yankees and put up career numbers, shocked many by taking his talents across town to Queens.
+           </p>
+
+           <p>
+            At 26, Soto is viewed as one of the best players in the MLB and a generational talent. In 2024, he was a catalyst behind the Yankees’ World Series run — where they lost to the Los Angeles Dodgers in five games — and provided many memorable moments on the way.
+           </p>
+
+           <p>
+            Now, he’s in a different color, and the Mets were the best location for him to begin with. Here’s a few reasons why.
+           </p>
+
+    <h3>
+        1. Soto's stellar 2024
+    </h3>
  
 
 </body>
