--- a/story.html
+++ b/story.html
@@ -35,6 +35,16 @@
     <h3>
         1. Soto's stellar 2024
     </h3>
+
+    <p>
+        In 2024 with the Yankees, Soto had the best year of his career dating back to 2019, when he won the World Series with the Washington Nationals. While the Yankees did not win it all, Soto is a major reason it had the success it did.
+    </p>
+
+    <p>
+        As seen below, in his one year with the Yankees, Soto had a career-high 41 home runs and was one short of tying his career-high in RBI. This puts him 4th and 6th in the MLB, respectively.
+    </p>
+
+    <div class="flourish-embed flourish-chart" data-src="visualisation/21835855"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/21835855/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
  
 
 </body>
