--- a/story.html
+++ b/story.html
@@ -46,6 +46,13 @@
 
     <div class="flourish-embed flourish-chart" data-src="visualisation/21835855"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/21835855/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
  
+    <p>
+        One of Soto’s best attributes is his plate discipline, and he did not disappoint in 2024. His slugging percentage and on base percentage was both top five in baseball, putting him up there with Aaron Judge and Shohei Ohtani. If he is able to match his 2024 numbers, he'll make an immediate impact on the Mets.
+    </p>
+
+    <h3>
+        2. Batting after Francisco Lindor
+    </h3>
 
 </body>
 
