--- a/favorites.html
+++ b/favorites.html
@@ -16,6 +16,7 @@
 
     <h2> Attached are some of my favorite works I have created for different publications. </h2>
 
+    <!-- Two rows of favorites images. Click on the image and it brings you to the link.-->
    <div class = "favorites">
     <section>
      <article> <a href = "https://bluelinestation.com/posts/2023-2024-new-york-rangers-historic-unsuccessful-season-that-will-remembered-long-time"> <img src ="nyrcropped.png"
