--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body> 
     <div id = "content">
        
+        <!-- Navigation bar. Can be found on every page.-->
    <div id = "nav-bar"> 
     <div class="nav-button"> <a href="about.html" > Contact </a> </div> 
     <div class="nav-button"> <a href="recent.html" >  Recent </a> </div> 
@@ -17,7 +18,7 @@
 
    <h1>  Welcome to my Sports Portfolio! </h1>
 
-
+<!-- about information-->
 <p>
 My name is Jake Mozarsky. I am from Westchester, New York and study sports journalism at Northwestern University. 
 
