--- a/recent.html
+++ b/recent.html
@@ -15,6 +15,7 @@
 
     <h1>  I have work  in the following publications and platforms. Click the image banner to be taken to my page:</h1>
 
+    <!-- Image banners for each website, so when you click on the image it brings you to my page on the site.-->
     <div class = "image_banners">
 <h3>  <a href = " https://bluelinestation.com/author/jmozarsky/" target="_blank">  <img src ="Blsbanner.png"
     width = 75% >  </a> </h3>
