--- a/story.html
+++ b/story.html
@@ -54,5 +54,25 @@
         2. Batting after Francisco Lindor
     </h3>
 
+    <p>
+        In 2024, Soto made up one of the best 1-2 punches in the MLB with the American League MVP Aaron Judge. Combined, the two had 99 home runs, 253 RBI and both placed in the top five in the league in batting average and wins above replacement (WAR).
+    </p>
+
+    <p>
+        With the Mets, Soto will make up another one of the league's electric duos with Francisco Lindor. Lindor is coming off a career season where he had 33 home runs, 91 RBI and was second in National League MVP voting.
+    </p>
+
+    <p>
+        Statistically, besides Shohei Ohtani, there was nobody in the National League more valuable to their team than Lindor was with the Mets. Combine him with Soto, and the Mets are one of the most elite baseball teams.
+    </p>
+
+    <p>
+        Looking at 2024 WAR stats, Lindor and Soto were both top-10 in the MLB in this category. Entering 2025, no teammate combo can say the same. The two should add over 12 together if they stay healthy. 
+    </p>
+
+    <div class="flourish-embed" data-src="story/2943612"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/story/2943612/thumbnail" width="100%" alt="visualization" /></noscript></div>
+    <p>
+        That's scary, especially for a team that was two wins away from the World Series.
+    </p>
 </body>
 
