--- a/story.html
+++ b/story.html
@@ -14,7 +14,7 @@
            </div>
     
            <div class = "Sotoheadline">
-    <h1>  Juan Soto is destined for success with the New York Mets</h1>
+    <h1> Three Reasons Juan Soto is destined for success with the New York Mets</h1>
 <h2>
     2024 was Juan Soto’s best season yet. Here’s why he’ll have a better one in 2025 across town.
 </h2>
@@ -74,5 +74,32 @@
     <p>
         That's scary, especially for a team that was two wins away from the World Series.
     </p>
+
+    <h3>
+        3. Juan Soto is generational
+    </h3>
+
+    <p>
+        There's not much data that can prove this point, but anyone that follows baseball knows that Juan Soto is a generational talent. At 26-years-old, he is a 4-time All Star, 3-time All-MLB First Team, five-time Silver Slugger and a World Series champion.
+    </p>
+
+    <p>
+        Even though it's a small sample size and it is spring training, Soto has already given Mets fans something to be excited for. He hit a home run in his first at-bat, and then on Friday against the Nationals, he hit another right after bobbing his head the pitch before.
+    </p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CNUWwj0obfY?si=_Pqpx0R_LUHCF-06" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <p>
+        Juan Soto will give the Mets and their fans something they haven't seen. Whether it's the elite plate discipline, slugging power, ability to perform in the clutch or just overall aura he brings, he makes the Mets a much better baseball team.
+    </p>
+
+    <p>
+        At 26, Soto is only entering the prime of his career and he's slated to get better. On a true World Series contender, he has the opportunity to win multiple championships and bring hope to a franchise that has not won a World Series since 1986.
+    </p>
+
+    <p>
+        Now, baseball fans have to wait to see how it all unfolds in Queens.
+    </p>
+
 </body>
 
