--- a/story.html
+++ b/story.html
@@ -18,6 +18,8 @@
 <h2>
     2024 was Juan Soto’s best season yet. Here’s why he’ll have a better one in 2025 across town.
 </h2>
+
+<img src = "Soto.png">
            </div>
 
            <p>
