--- a/story.html
+++ b/story.html
@@ -31,7 +31,7 @@
            </p>
 
            <p>
-            Now, he’s in a different color, and the Mets were the best location for him to begin with. Here’s a few reasons why.
+            Now, he’s in a different color, and the Mets were the best location for him to begin with. Here’s a few reasons why he'll be successful in Queens.
            </p>
 
     <h3>
