--- a/story.html
+++ b/story.html
@@ -39,7 +39,7 @@
     </h3>
 
     <p>
-        In 2024 with the Yankees, Soto had the best year of his career dating back to 2019, when he won the World Series with the Washington Nationals. While the Yankees did not win it all, Soto is a major reason it had the success it did.
+        In 2024 with the Yankees, Soto had the best year of his career dating back to 2019, when he won the World Series with the Washington Nationals. While the Yankees did not win it all, Soto is a major reason they had the success they did.
     </p>
 
     <p>
@@ -49,7 +49,7 @@
     <div class="flourish-embed flourish-chart" data-src="visualisation/21835855"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/21835855/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
  
     <p>
-        One of Soto’s best attributes is his plate discipline, and he did not disappoint in 2024. His slugging percentage and on base percentage was both top five in baseball, putting him up there with Aaron Judge and Shohei Ohtani. If he is able to match his 2024 numbers, he'll make an immediate impact on the Mets.
+        One of Soto’s best attributes is his plate discipline, and this was once again the case in 2024. His slugging percentage and on base percentage was both top five in baseball, putting him up there with Aaron Judge and Shohei Ohtani. If he is able to match his 2024 numbers, he'll make an immediate impact on the Mets.
     </p>
 
     <h3>
