--- a/story.html
+++ b/story.html
@@ -16,7 +16,7 @@
            <div class = "Sotoheadline">
     <h1> Three Reasons Juan Soto is destined for success with the New York Mets</h1>
 <h2>
-    2024 was Juan Soto’s best season yet. Here’s why he’ll have a better one in 2025 across town.
+    2024 was Juan Soto’s best season yet. Here’s why he’ll have a better one across town in 2025.
 </h2>
 
 <img src = "Soto.png">
@@ -27,11 +27,11 @@
            </p>
 
            <p>
-            At 26, Soto is viewed as one of the best players in the MLB and a generational talent. In 2024, he was a catalyst behind the Yankees’ World Series run — where they lost to the Los Angeles Dodgers in five games — and provided many memorable moments on the way.
+            At 26, Soto is viewed as one of the best players in baseball and a generational talent. In 2024, he was a catalyst behind the Yankees’ World Series run — where they lost to the Los Angeles Dodgers in five games — and provided many memorable moments along the way.
            </p>
 
            <p>
-            Now, he’s in a different color, and the Mets were the best location for him to begin with. Here’s a few reasons why he'll be successful in Queens.
+            The Mets were the best location for him to begin with. Here’s a few reasons why Soto will be successful in Queens.
            </p>
 
     <h3>
@@ -49,7 +49,7 @@
     <div class="flourish-embed flourish-chart" data-src="visualisation/21835855"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/visualisation/21835855/thumbnail" width="100%" alt="chart visualization" /></noscript></div>
  
     <p>
-        One of Soto’s best attributes is his plate discipline, and this was once again the case in 2024. His slugging percentage and on base percentage was both top five in baseball, putting him up there with Aaron Judge and Shohei Ohtani. If he is able to match his 2024 numbers, he'll make an immediate impact on the Mets.
+        One of Soto’s best attributes is his plate discipline, and this was once again the case in 2024. His slugging percentage and on base percentage were both top five in baseball, putting him up there with Aaron Judge and Shohei Ohtani. If he is able to match his 2024 numbers, he'll make an immediate impact on the Mets.
     </p>
 
     <h3>
@@ -57,7 +57,7 @@
     </h3>
 
     <p>
-        In 2024, Soto made up one of the best 1-2 punches in the MLB with the American League MVP Aaron Judge. Combined, the two had 99 home runs, 253 RBI and both placed in the top five in the league in batting average and wins above replacement (WAR).
+        In 2024, Soto made up one of the best 1-2 punches in MLB with the American League MVP Aaron Judge. Combined, the two had 99 home runs, 253 RBI and both placed in the top five in the league in batting average and wins above replacement (WAR).
     </p>
 
     <p>
@@ -69,7 +69,7 @@
     </p>
 
     <p>
-        Looking at 2024 WAR stats, Lindor and Soto were both top-10 in the MLB in this category. Entering 2025, no teammate combo can say the same. The two should add over 12 together if they stay healthy. 
+        Looking at 2024 WAR stats, Lindor and Soto were both top-10 in MLB in this category. Entering 2025, no teammate combo can say the same. The two should add over 12 together if they stay healthy. 
     </p>
 
     <div class="flourish-embed" data-src="story/2943612"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/story/2943612/thumbnail" width="100%" alt="visualization" /></noscript></div>
