--- a/story.html
+++ b/story.html
@@ -69,7 +69,7 @@
     </p>
 
     <p>
-        Looking at 2024 WAR stats, Lindor and Soto were both top-10 in MLB in this category. Entering 2025, no teammate combo can say the same. The two should add over 12 together if they stay healthy. 
+        Looking at 2024 WAR stats, Lindor and Soto were both top-10 in MLB in this category. Entering 2025, no other teammate combo can say the same. The two should add over 12 together if they stay healthy. 
     </p>
 
     <div class="flourish-embed" data-src="story/2943612"><script src="https://public.flourish.studio/resources/embed.js"></script><noscript><img src="https://public.flourish.studio/story/2943612/thumbnail" width="100%" alt="visualization" /></noscript></div>
